Fix for masonry gap on page load

--- a/src/templates/masonry/css/masonry.css
+++ b/src/templates/masonry/css/masonry.css
@@ -52,6 +52,19 @@
 	vertical-align: top;
 }
 
+.fg-masonry .fg-item { margin-bottom: var(--fg-gutter); margin-right: var(--fg-gutter); width: var(--fg-column-width); }
+.fg-masonry .fg-column-width { width: var(--fg-column-width); }
+.fg-masonry .fg-gutter-width { width: var(--fg-gutter); }
+
+.fg-masonry.fg-col1 .fg-item:nth-child(1n+3),
+.fg-masonry.fg-col2 .fg-item:nth-child(2n+4),
+.fg-masonry.fg-col3 .fg-item:nth-child(3n+5),
+.fg-masonry.fg-col4 .fg-item:nth-child(4n+6),
+.fg-masonry.fg-col5 .fg-item:nth-child(5n+7),
+.fg-masonry.fg-col6 .fg-item:nth-child(6n+8) {
+    margin-right: 0;
+}
+
 .fg-masonry.fg-col2 {
     --fg-column-width: var(--fg-col2-width);
 }
@@ -73,12 +86,19 @@
     .fg-masonry.fg-col6 {
         --fg-column-width: var(--fg-col5-width);
     }
+    .fg-masonry.fg-col6 .fg-item:nth-child(5n+7) {
+        margin-right: 0;
+    }
 }
 /* Force 4 column layout < 1024px */
 @media screen and (max-width: 1024px) {
     .fg-masonry.fg-col5,
     .fg-masonry.fg-col6 {
         --fg-column-width: var(--fg-col4-width);
+    }
+    .fg-masonry.fg-col5 .fg-item:nth-child(4n+6),
+    .fg-masonry.fg-col6 .fg-item:nth-child(4n+6) {
+        margin-right: 0;
     }
 }
 /* Force 3 column layout < 720px */
@@ -88,6 +108,11 @@
     .fg-masonry.fg-col6 {
         --fg-column-width: var(--fg-col3-width);
     }
+    .fg-masonry.fg-col4 .fg-item:nth-child(3n+5),
+    .fg-masonry.fg-col5 .fg-item:nth-child(3n+5),
+    .fg-masonry.fg-col6 .fg-item:nth-child(3n+5) {
+        margin-right: 0;
+    }
 }
 /* Force 2 column layout < 480px */
 @media screen and (max-width: 480px) {
@@ -96,6 +121,12 @@
     .fg-masonry.fg-col5,
     .fg-masonry.fg-col6 {
         --fg-column-width: var(--fg-col2-width);
+    }
+    .fg-masonry.fg-col3 .fg-item:nth-child(2n+4),
+    .fg-masonry.fg-col4 .fg-item:nth-child(2n+4),
+    .fg-masonry.fg-col5 .fg-item:nth-child(2n+4),
+    .fg-masonry.fg-col6 .fg-item:nth-child(2n+4) {
+        margin-right: 0;
     }
 }
 /* Force 1 column layout < 320px */
@@ -108,11 +139,14 @@
         --fg-gutter: 0;
         --fg-column-width: 100%;
     }
+    .fg-masonry.fg-col2 .fg-item:nth-child(1n+3),
+    .fg-masonry.fg-col3 .fg-item:nth-child(1n+3),
+    .fg-masonry.fg-col4 .fg-item:nth-child(1n+3),
+    .fg-masonry.fg-col5 .fg-item:nth-child(1n+3),
+    .fg-masonry.fg-col6 .fg-item:nth-child(1n+3) {
+        margin-right: 0;
+    }
 }
-
-.fg-masonry .fg-item { margin-bottom: var(--fg-gutter); width: var(--fg-column-width); }
-.fg-masonry .fg-column-width { width: var(--fg-column-width); }
-.fg-masonry .fg-gutter-width { width: var(--fg-gutter); }
 
 /* Border Styles - We must apply width changing border styles to the fg-column-width element so that the plugin can correctly determine the item widths. */
 .foogallery.fg-border-thin .fg-column-width {
